--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-toastify": "^10.0.5",
     "swiper": "^11.1.3",
     "tailwindcss": "^3.4.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
